src/objects/Accounting_SoftwareProductRate__c.object
<CustomObject>
    <label>Accounting_SoftwareProductRate</label>
    <nameField>
        <displayFormat>SoftwareProductRate-{00000}</displayFormat>
        <label>accounting_softwareproductrate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting_SoftwareProductRate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is_active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>monthly_fee__c</fullName>
        <label>Monthly Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CommCareHQ</fullName>
                    <default>true</default>
                    <label>CommCareHQ</label>
                </value>
                <value>
                    <fullName>CommCareHQ India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>